--- a/index.html
+++ b/index.html
@@ -6,10 +6,139 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Responsive Football</title>
+  <script src="https://kit.fontawesome.com/95e2a1fc9b.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<h1>Football</h1>
+  <main>
+    <!-- Top section -->
+
+    <section class="top-section">
+      <div class="copa-2021">
+        <div class="heading">
+          <h1>Conmebol</h1>
+          <h1>Copa America</h1>
+          <h1>2021</h1>
+          <a target="_blank" href="https://www.youtube.com/watch?v=3P7S-wd9NF0">
+            <button class="watch-now">Watch Now <i class="fas fa-arrow-right"></i></button></a>
+        </div>
+        <div class="top-player">
+          <img src="images/banner.png" alt="">
+        </div>
+      </div>
+    </section>
+
+    <!-- players section -->
+
+    <section class="players-section">
+      <div class="players">
+        <div class="player">
+          <img src="images/players/player-1.png" alt="">
+          <h3>Neymar</h3>
+          <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
+            forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
+        </div>
+        <div class="player">
+          <img src="images/players/player-2.png" alt="">
+          <h3>Neymar</h3>
+          <p>This is my responsive work.</p>
+        </div>
+        <div class="player">
+          <img src="images/players/player-3.png" alt="">
+          <h3>Neymar</h3>
+          <p>This is my responsive work.</p>
+        </div>
+        <div class="player">
+          <img src="images/players/player-4.png" alt="">
+          <h3>Neymar</h3>
+          <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
+            forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
+        </div>
+        <div class="player">
+          <img src="images/players/player-5.png" alt="">
+          <h3>Neymar</h3>
+          <p>This is my responsive work.</p>
+        </div>
+        <div class="player">
+          <img src="images/players/player-6.png" alt="">
+          <h3>Neymar</h3>
+          <p>This is my responsive work.</p>
+        </div>
+        <div class="player">
+          <img src="images/players/player-7.png" alt="">
+          <h3>Neymar</h3>
+          <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
+            forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
+        </div>
+        <div class="player">
+          <img src="images/players/player-8.png" alt="">
+          <h3>Neymar</h3>
+          <p>This is my responsive work.</p>
+        </div>
+        <div class="player">
+          <img src="images/players/player-9.png" alt="">
+          <h3>Neymar</h3>
+          <p>This is my responsive work.</p>
+        </div>
+        <div class="player">
+          <img src="images/players/player-10.png" alt="">
+          <h3>Neymar</h3>
+          <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
+            forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
+        </div>
+        <div class="player">
+          <img src="images/players/player-11.png" alt="">
+          <h3>Neymar</h3>
+          <p>This is my responsive work.</p>
+        </div>
+        <div class="player">
+          <img src="images/players/player-12.png" alt="">
+          <h3>Neymar</h3>
+          <p>This is my responsive work.</p>
+        </div>
+      </div>
+
+      <!-- animation section -->
+      <div class="container">
+        <div class="all-highlights">
+          <h2>All Highlighs Copa America 2021</h2>
+          <p>It's really natural. players try to best to win in the game but unfortunately sometimes thay mistake the
+            shiny match and trofhy</p>
+        </div>
+          <div class="field">
+            <div class="ball">
+              <img src="images/tiger.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- Footer section -->
+
+      <div class="footer">
+        <div class="logo">
+          <img src="images/Logo.png" alt="">
+        </div>
+        <div class="icon-decoration">
+          <div class="icon">
+            <i class="fab fa-instagram"></i>
+          </div>
+          <div class="icon">
+            <i class="fab fa-youtube"></i>
+          </div>
+          <div class="icon">
+            <i class="fab fa-linkedin"></i>
+          </div>
+          <div class="icon">
+            <i class="fab fa-pinterest-square"></i>
+          </div>
+        </div>
+        <p>copyright &copy; 2022 Football</p>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
