--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <main>
+    
     <!-- Top section -->
 
     <section class="top-section">
@@ -99,21 +100,25 @@
         </div>
       </div>
 
-      <!-- animation section -->
+      <!-- animation section (bonus part-1) -->
+
       <div class="container">
-        <div class="all-highlights">
-          <h2>All Highlighs Copa America 2021</h2>
-          <p>It's really natural. players try to best to win in the game but unfortunately sometimes thay mistake the
-            shiny match and trofhy</p>
-        </div>
-          <div class="field">
-            <div class="ball">
-              <img src="images/tiger.jpg" alt="">
-            </div>
+        <div class="field">
+          <div class="ball">
+            <img src="images/tiger.jpg" alt="">
           </div>
         </div>
-      </div>
 
+        <!-- Highlights (bonus part-2) -->
+
+        <div class="highlights">
+          <h2>All Highlights Copa America 2021</h2>
+          <p>Copa America 2021 is over, and Argentina is the queen of South America after 28 years, with Messi finally
+            winning his first international title. It was a long journey with 4 group .</p>
+            <a target="_blank" href="https://www.youtube.com/watch?v=3P7S-wd9NF0">
+              <button class="watch-now">Watch Now <i class="fas fa-arrow-right"></i></button></a>
+        </div>
+      </div>
 
       <!-- Footer section -->
 
@@ -123,16 +128,21 @@
         </div>
         <div class="icon-decoration">
           <div class="icon">
-            <i class="fab fa-instagram"></i>
+            <a target="_blank" href="https://www.instagram.com/">
+              <i class="fab fa-instagram"></i></a>
           </div>
           <div class="icon">
-            <i class="fab fa-youtube"></i>
+            <a target="_blank"
+              href="https://www.youtube.com/results?search_query=how+to+make+a+responsive+website+using+html+and+css">
+              <i class="fab fa-youtube"></i></a>
           </div>
           <div class="icon">
-            <i class="fab fa-linkedin"></i>
+            <a target="_blank" href="https://www.linkedin.com/login">
+              <i class="fab fa-linkedin"></i></a>
           </div>
           <div class="icon">
-            <i class="fab fa-pinterest-square"></i>
+            <a target="_blank" href="https://www.pinterest.com/">
+              <i class="fab fa-pinterest-square"></i></a>
           </div>
         </div>
         <p>copyright &copy; 2022 Football</p>
