--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <main>
-    
+
     <!-- Top section -->
 
     <section class="top-section">
@@ -36,67 +36,77 @@
       <div class="players">
         <div class="player">
           <img src="images/players/player-1.png" alt="">
-          <h3>Neymar</h3>
+          <h3>Neymar Jr</h3>
           <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
             forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
         </div>
         <div class="player">
           <img src="images/players/player-2.png" alt="">
-          <h3>Neymar</h3>
-          <p>This is my responsive work.</p>
+          <h3>Lionel Messy</h3>
+          <p>Leonel Messy, known as Messy, is a Argentine professional footballer who plays as a
+            forward for Ligue 1 club Paris Saint-Germain and the Argentine national team.</p>
         </div>
         <div class="player">
           <img src="images/players/player-3.png" alt="">
-          <h3>Neymar</h3>
-          <p>This is my responsive work.</p>
+          <h3>
+            Cristiano Ronaldo
+          </h3>
+          <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
+            forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
         </div>
         <div class="player">
           <img src="images/players/player-4.png" alt="">
-          <h3>Neymar</h3>
+          <h3>Paulo Dybala</h3>
           <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
             forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
         </div>
         <div class="player">
           <img src="images/players/player-5.png" alt="">
-          <h3>Neymar</h3>
-          <p>This is my responsive work.</p>
+          <h3>Mesut Ozil</h3>
+          <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
+            forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
         </div>
         <div class="player">
           <img src="images/players/player-6.png" alt="">
-          <h3>Neymar</h3>
-          <p>This is my responsive work.</p>
+          <h3>Mauro Icardi </h3>
+          <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
+            forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
         </div>
         <div class="player">
           <img src="images/players/player-7.png" alt="">
-          <h3>Neymar</h3>
+          <h3>Di Maria</h3>
           <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
             forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
         </div>
         <div class="player">
           <img src="images/players/player-8.png" alt="">
-          <h3>Neymar</h3>
-          <p>This is my responsive work.</p>
+          <h3>Kylian Mbappe</h3>
+          <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
+            forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
         </div>
         <div class="player">
           <img src="images/players/player-9.png" alt="">
-          <h3>Neymar</h3>
-          <p>This is my responsive work.</p>
+          <h3>Mohamed Salah</h3>
+          <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
+            forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
         </div>
         <div class="player">
           <img src="images/players/player-10.png" alt="">
-          <h3>Neymar</h3>
+          <h3>Harry kane</h3>
           <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
             forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
         </div>
         <div class="player">
           <img src="images/players/player-11.png" alt="">
-          <h3>Neymar</h3>
-          <p>This is my responsive work.</p>
+          <h3>Kevin De Bruyne</h3>
+          <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
+            forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
         </div>
         <div class="player">
           <img src="images/players/player-12.png" alt="">
-          <h3>Neymar</h3>
-          <p>This is my responsive work.</p>
+          <h3>Philippe coutinho</h3>
+          <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a
+            forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
         </div>
       </div>
 
@@ -115,8 +125,8 @@
           <h2>All Highlights Copa America 2021</h2>
           <p>Copa America 2021 is over, and Argentina is the queen of South America after 28 years, with Messi finally
             winning his first international title. It was a long journey with 4 group .</p>
-            <a target="_blank" href="https://www.youtube.com/watch?v=3P7S-wd9NF0">
-              <button class="watch-now">Watch Now <i class="fas fa-arrow-right"></i></button></a>
+          <a target="_blank" href="https://www.youtube.com/watch?v=3P7S-wd9NF0">
+            <button class="watch-now high">Watch Now <i class="fas fa-arrow-right"></i></button></a>
         </div>
       </div>
 
